ejarnutowski changes and controllers
